Updated because this thing is ancient

--- a/index.html
+++ b/index.html
@@ -23,30 +23,64 @@
       <div class="container my-auto">
         <div class="row">
             <div class="col-lg-5">
-                <img src="images/portrait_v2.jpg" class="img-fluid portrait">
+                <img src="images/portrait_v3.jpg" class="img-fluid portrait">
             </div>
             <div class="col-lg-7">
                 <h1 class="mb-3">Genevieve Carter</h1>
                 <h3 class="mb-5">Front End Developer</h3>
-                <a class="btn btn-primary btn-xl js-scroll-trigger" href="#flight-centre">View Projects</a>
+                <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://www.linkedin.com/in/genevievec/" target="_blank">LinkedIn</a>
+                <a class="btn btn-primary btn-xl js-scroll-trigger" href="#powered-by-jumbo">View Projects</a>
             </div>
         </div>
       </div>
       <div class="overlay"></div>
     </header>
     <div class="outer-container">
+        <div class="section" id="powered-by-jumbo">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <h2>Powered by Jumbo (PBJ)</h2>
+                        <p>PBJ is Jumbo Interactive's white-label SaaS platform that allows clients to manage their draws, customers and retail channels inside a purpose-built platform.</p>
+                        <p>As an in-house Front End Developer contributing to the Web UI on the PBJ project over 3 years, I developed features for 'Lotto Party' (social syndicates for web), improved site performance, improved usability and increased checkout conversion by 5.34% by adjusting checkout navigation & UX.</p>
+                    </div>
+                    <div class="col-lg-6 feature">
+                        <a href="https://www.ozlotteries.com/" target="_blank">
+                            <img src="images/portfolio-pbj.jpg" class="img-fluid">
+                        </a>
+                        <a href="https://www.ozlotteries.com/" target="_blank">View Website</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="section" id="youfoodz">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <h2>Youfoodz</h2>
+                        <p>Youfoodz is an online retailer of ready-made meals, snacks and juices. As an in-house Front End Developer at Youfoodz I worked across both the retail e-commerce site and wholesale e-commerce site.</p>
+                        <p>Leveraging the Shopify platform with React to mount customer UI components, I worked closely with marketing to implement a custom tagging feature, implemented customer filtering functionality and developed various interactive promotional landing pages to support marketing campaigns.</p>
+                    </div>
+                    <div class="col-lg-6 feature">
+                        <a href="https://www.youfoodz.com" target="_blank">
+                            <img src="images/portfolio-youfoodz.jpg" class="img-fluid">
+                        </a>
+                        <a href="https://www.youfoodz.com" target="_blank">View Website</a>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="section" id="flight-centre">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
                         <h2>Flight Centre</h2>
                         <p>Flight Centre Travel Academy (FCTA) is Flight Centre’s registered training organisation. Their old website needed some love, as it was poorly structured and difficult for students to find relevant information.</p>
-                        
                         <p>As the key Front End Developer on this project, I developed various modular templates from designs to ensure the client could easily create new pages as their course offerings expanded. I helped implement multiple strong calls to action to help convert visitors to leads and implemented SVG masks within modules to allow the client to change images in a flexible way.</p>
                     </div>
                     <div class="col-lg-6 feature">
                         <a href="https://www.fctravelacademy.com/" target="_blank">
-                            <img src="images/flight-centre.jpg" class="img-fluid">
+                            <img src="images/portfolio-flight-centre.jpg" class="img-fluid">
                         </a>
                         <a href="https://www.fctravelacademy.com/" target="_blank">View Website</a>
                     </div>
@@ -63,26 +97,9 @@
                     </div>
                     <div class="col-lg-6 feature">
                         <a href="https://www.gamify.com/" target="_blank">
-                            <img src="images/gamify-white-bg.jpg" class="img-fluid">
+                            <img src="images/portfolio-gamify.jpg" class="img-fluid">
                         </a>
                         <a href="https://www.gamify.com/" target="_blank">View Website</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-         <div class="section" id="salon-style">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <h2>Salon Style</h2>
-                        <p>Salon Style is an established online retailer of haircare, skincare and beauty products. The redesign of Salon Style’s website required creating a clean, modern and interactive feel to freshen up their online presence. As the key Web Designer and Front End Developer on the project, I performed research into Salon Style’s competitors and worked with the client to understand their customer base.</p>
-                        <p>I was able to identify some key pain points of the client’s customers and suggest improvements regarding navigation, user-flow and product filtering. I created the initial designs for Salon Style and once these were approved I developed the pages in Shopify and also worked with a senior developer to install necessary extensions.</p>
-                    </div>
-                    <div class="col-lg-6 feature">
-                    <a href="https://salonstyle.com.au/" target="_blank">
-                        <img src="images/salon_style.jpg" class="img-fluid">
-                    </a>
-                        <a href="https://salonstyle.com.au/" target="_blank">View Website</a>
                     </div>
                 </div>
             </div>
@@ -97,64 +114,16 @@
                     </div>
                     <div class="col-lg-6 feature">
                         <a href="https://www.weployapp.com" target="_blank">
-                            <img src="images/weploy-white-bg.jpg" class="img-fluid">
+                            <img src="images/portfolio-weploy.jpg" class="img-fluid">
                         </a>
                         <a href="https://www.weployapp.com" target="_blank">View Website</a>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="section" id="bigstone">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <h2>Bigstone</h2>
-                        <p>After updating their branding, Bigstone found that their current website did not exactly align with their brand and company direction.</p>
-                        <p>I worked closely with a Senior Developer to identify elements of their current website that could be adapted or refactored, as well as elements that would need to be created from scratch. We were able to fast-track Bigstone's website refresh by leveraging existing work in order to create a fresh and efficient outcome for the client.</p>
-                    </div>
-                    <div class="col-lg-6 feature">
-                        <img src="images/bigstone.jpg" class="img-fluid">
-                        <a href="#">View Website</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="section" id="netball-queensland">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <h2>Netball Queensland</h2>
-                        <p>Netball Queensland required a new website their Play Netball Queensland initiative and media campaign. The campaign aims to support and encourage young girls of all ages to get active and participate in netball. The client brief was to create a website that was fun, fresh, young and not too girly. The website needed to be welcoming, encouraging and informative. I worked closely with the client to discuss their goals and desired layout. I then created detailed mockups in photoshop which were approved for development by the client. I created the website in WordPress from the mockups and implemented small changes prior to launch as requested.</p>
-                    </div>
-                    <div class="col-lg-6 feature">
-                        <a href="https://playnetballqld.com.au/" target="_blank">
-                            <img src="images/playnetball_qld_v2.jpg" class="img-fluid">
-                        </a>
-                        <a href="https://playnetballqld.com.au/" target="_blank">View Website</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="section" id="own-it-conveyancing">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <h2>Own It Conveyancing</h2>
-                        <p>Own It Conveyancing is a major conveyancing firm primarily aimed at first home owners. The client wanted to refresh their old website and provide an easy experience for their users, most of which primarily visit the website on mobile.</p>
-                        <p>I worked with the client to design and develop a professional, easy to use WordPress website that they could maintain and update. I worked with a Senior Developer to create the 'Free Quote' functionality and usability.</p>
-                    </div>
-                    <div class="col-lg-6 feature">
-                        <a href="https://ownitconveyancing.com/">
-                            <img src="images/own_it_conveyancing.jpg" class="img-fluid">
-                        </a>
-                        <a href="https://ownitconveyancing.com/">View Website</a>
-                    </div>
-                </div>
-            </div>
-        </div>
       </div>
       <div class="footer text-center">
-          Genevieve Carter 2019
+          Genevieve Carter 2022
       </div>
   </body>
 </html>
