Added prettier config, reformatted files

--- a/index.html
+++ b/index.html
@@ -1,129 +1,235 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Genevieve Carter - Front End Developer</title>
-    <!-- Bootstrap Core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/solid.css" integrity="sha384-osqezT+30O6N/vsMqwW8Ch6wKlMofqueuia2H7fePy42uC05rm1G+BUPSd2iBSJL" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/fontawesome.css" integrity="sha384-BzCy2fixOYd0HObpx3GMefNqdbA7Qjcc91RgYeDjrHTIEXqiF00jKvgQG0+zY/7I" crossorigin="anonymous">
-    <!-- Custom CSS -->
-    <link href="css/style.css" rel="stylesheet">
-    <!-- Scripts -->
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="js/smooth-scroll.js"></script>
-  </head>
-  <body>
-      <header class="masthead d-flex">
-      <div class="container my-auto">
-        <div class="row">
-            <div class="col-lg-5">
-                <img src="images/portrait_v3.jpg" class="img-fluid portrait">
-            </div>
-            <div class="col-lg-7">
-                <h1 class="mb-3">Genevieve Carter</h1>
-                <h3 class="mb-5">Front End Developer</h3>
-                <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://www.linkedin.com/in/genevievec/" target="_blank">LinkedIn</a>
-                <a class="btn btn-primary btn-xl js-scroll-trigger" href="#powered-by-jumbo">View Projects</a>
-            </div>
-        </div>
-      </div>
-      <div class="overlay"></div>
-    </header>
-    <div class="outer-container">
-        <div class="section" id="powered-by-jumbo">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <h2>Powered by Jumbo (PBJ)</h2>
-                        <p>PBJ is Jumbo Interactive's white-label SaaS platform that allows clients to manage their draws, customers and retail channels inside a purpose-built platform.</p>
-                        <p>As an in-house Front End Developer contributing to the Web UI on the PBJ project over 3 years, I developed features for 'Lotto Party' (social syndicates for web), improved site performance, improved usability and increased checkout conversion by 5.34% by adjusting checkout navigation & UX.</p>
-                    </div>
-                    <div class="col-lg-6 feature">
-                        <a href="https://www.ozlotteries.com/" target="_blank">
-                            <img src="images/portfolio-pbj.jpg" class="img-fluid">
-                        </a>
-                        <a href="https://www.ozlotteries.com/" target="_blank">View Website</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="section" id="youfoodz">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <h2>Youfoodz</h2>
-                        <p>Youfoodz is an online retailer of ready-made meals, snacks and juices. As an in-house Front End Developer at Youfoodz I worked across both the retail e-commerce site and wholesale e-commerce site.</p>
-                        <p>Leveraging the Shopify platform with React to mount customer UI components, I worked closely with marketing to implement a custom tagging feature, implemented customer filtering functionality and developed various interactive promotional landing pages to support marketing campaigns.</p>
-                    </div>
-                    <div class="col-lg-6 feature">
-                        <a href="https://www.youfoodz.com" target="_blank">
-                            <img src="images/portfolio-youfoodz.jpg" class="img-fluid">
-                        </a>
-                        <a href="https://www.youfoodz.com" target="_blank">View Website</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="section" id="flight-centre">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <h2>Flight Centre</h2>
-                        <p>Flight Centre Travel Academy (FCTA) is Flight Centre’s registered training organisation. Their old website needed some love, as it was poorly structured and difficult for students to find relevant information.</p>
-                        <p>As the key Front End Developer on this project, I developed various modular templates from designs to ensure the client could easily create new pages as their course offerings expanded. I helped implement multiple strong calls to action to help convert visitors to leads and implemented SVG masks within modules to allow the client to change images in a flexible way.</p>
-                    </div>
-                    <div class="col-lg-6 feature">
-                        <a href="https://www.fctravelacademy.com/" target="_blank">
-                            <img src="images/portfolio-flight-centre.jpg" class="img-fluid">
-                        </a>
-                        <a href="https://www.fctravelacademy.com/" target="_blank">View Website</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="section" id="gamify">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <h2>Gamify</h2>
-                        <p>Gamify is a Gamification Marketing leader that helps companies make fun and enaging ‘AdverGames’. After recently partnering with Wix, Gamify identified the need for a website refresh, including the development of a Learning Centre to help educate potential customers about the benefits of gamification.</p>
-                        <p>I developed main pages for this project including the Home page, Partner page, Direct page, Wix page and Learning Centre. The client wanted to be able to display pricing on the Direct page based on the user’s region, while also allowing them the option to change the currency. I created this functionality using HubSpot’s smart content features in conjunction with jQuery and AJAX to get conversion rates from a currency API.</p>
-                    </div>
-                    <div class="col-lg-6 feature">
-                        <a href="https://www.gamify.com/" target="_blank">
-                            <img src="images/portfolio-gamify.jpg" class="img-fluid">
-                        </a>
-                        <a href="https://www.gamify.com/" target="_blank">View Website</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="section" id="weploy">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <h2>Weploy</h2>
-                        <p>Weploy is an online platform and app that connects businesses with pre-screened staff to help fill role vacancies. As Weploy has been gaining traction and increased exposure in the media, they required a new ‘two-sided’ website that would provide them with a vibrant look and channel visitors into the appropriate section of their website.</p>
-                        <p>A challenge faced during development was allowing the client with a sufficient amount of flexibility regarding colours (as they have multiple brand colours), while still making the templates easy to use for a non-developer. I provided training to the client, as well as significant documentation prior to launch to ensure they were comfortable and understood the new configutation of their website.</p>
-                    </div>
-                    <div class="col-lg-6 feature">
-                        <a href="https://www.weployapp.com" target="_blank">
-                            <img src="images/portfolio-weploy.jpg" class="img-fluid">
-                        </a>
-                        <a href="https://www.weployapp.com" target="_blank">View Website</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-      </div>
-      <div class="footer text-center">
-          Genevieve Carter 2022
-      </div>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, shrink-to-fit=no"
+		/>
+		<title>Genevieve Carter - Front End Developer</title>
+		<!-- Bootstrap Core CSS -->
+		<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+		<!-- Custom Fonts -->
+		<link
+			href="https://fonts.googleapis.com/css?family=Montserrat:400,600"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic"
+			rel="stylesheet"
+			type="text/css"
+		/>
+		<link
+			href="vendor/simple-line-icons/css/simple-line-icons.css"
+			rel="stylesheet"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://use.fontawesome.com/releases/v5.4.1/css/solid.css"
+			integrity="sha384-osqezT+30O6N/vsMqwW8Ch6wKlMofqueuia2H7fePy42uC05rm1G+BUPSd2iBSJL"
+			crossorigin="anonymous"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://use.fontawesome.com/releases/v5.4.1/css/fontawesome.css"
+			integrity="sha384-BzCy2fixOYd0HObpx3GMefNqdbA7Qjcc91RgYeDjrHTIEXqiF00jKvgQG0+zY/7I"
+			crossorigin="anonymous"
+		/>
+		<!-- Custom CSS -->
+		<link href="css/style.css" rel="stylesheet" />
+		<!-- Scripts -->
+		<script
+			type="text/javascript"
+			src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
+		></script>
+		<script src="js/smooth-scroll.js"></script>
+	</head>
+	<body>
+		<header class="masthead d-flex">
+			<div class="container my-auto">
+				<div class="row">
+					<div class="col-lg-5">
+						<img src="images/portrait_v3.jpg" class="img-fluid portrait" />
+					</div>
+					<div class="col-lg-7">
+						<h1 class="mb-3">Genevieve Carter</h1>
+						<h3 class="mb-5">Front End Developer</h3>
+						<a
+							class="btn btn-primary btn-xl js-scroll-trigger"
+							href="https://www.linkedin.com/in/genevievec/"
+							target="_blank"
+							>LinkedIn</a
+						>
+						<a
+							class="btn btn-primary btn-xl js-scroll-trigger"
+							href="#powered-by-jumbo"
+							>View Projects</a
+						>
+					</div>
+				</div>
+			</div>
+			<div class="overlay"></div>
+		</header>
+		<div class="outer-container">
+			<div class="section" id="powered-by-jumbo">
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-6">
+							<h2>Powered by Jumbo (PBJ)</h2>
+							<p>
+								PBJ is Jumbo Interactive's white-label SaaS platform that allows
+								clients to manage their draws, customers and retail channels
+								inside a purpose-built platform.
+							</p>
+							<p>
+								As an in-house Front End Developer contributing to the Web UI on
+								the PBJ project over 3 years, I developed features for 'Lotto
+								Party' (social syndicates for web), improved site performance,
+								improved usability and increased checkout conversion by 5.34% by
+								adjusting checkout navigation & UX.
+							</p>
+						</div>
+						<div class="col-lg-6 feature">
+							<a href="https://www.ozlotteries.com/" target="_blank">
+								<img src="images/portfolio-pbj.jpg" class="img-fluid" />
+							</a>
+							<a href="https://www.ozlotteries.com/" target="_blank"
+								>View Website</a
+							>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="section" id="youfoodz">
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-6">
+							<h2>Youfoodz</h2>
+							<p>
+								Youfoodz is an online retailer of ready-made meals, snacks and
+								juices. As an in-house Front End Developer at Youfoodz I worked
+								across both the retail e-commerce site and wholesale e-commerce
+								site.
+							</p>
+							<p>
+								Leveraging the Shopify platform with React to mount customer UI
+								components, I worked closely with marketing to implement a
+								custom tagging feature, implemented customer filtering
+								functionality and developed various interactive promotional
+								landing pages to support marketing campaigns.
+							</p>
+						</div>
+						<div class="col-lg-6 feature">
+							<a href="https://www.youfoodz.com" target="_blank">
+								<img src="images/portfolio-youfoodz.jpg" class="img-fluid" />
+							</a>
+							<a href="https://www.youfoodz.com" target="_blank"
+								>View Website</a
+							>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="section" id="flight-centre">
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-6">
+							<h2>Flight Centre</h2>
+							<p>
+								Flight Centre Travel Academy (FCTA) is Flight Centre’s
+								registered training organisation. Their old website needed some
+								love, as it was poorly structured and difficult for students to
+								find relevant information.
+							</p>
+							<p>
+								As the key Front End Developer on this project, I developed
+								various modular templates from designs to ensure the client
+								could easily create new pages as their course offerings
+								expanded. I helped implement multiple strong calls to action to
+								help convert visitors to leads and implemented SVG masks within
+								modules to allow the client to change images in a flexible way.
+							</p>
+						</div>
+						<div class="col-lg-6 feature">
+							<a href="https://www.fctravelacademy.com/" target="_blank">
+								<img
+									src="images/portfolio-flight-centre.jpg"
+									class="img-fluid"
+								/>
+							</a>
+							<a href="https://www.fctravelacademy.com/" target="_blank"
+								>View Website</a
+							>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="section" id="gamify">
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-6">
+							<h2>Gamify</h2>
+							<p>
+								Gamify is a Gamification Marketing leader that helps companies
+								make fun and enaging ‘AdverGames’. After recently partnering
+								with Wix, Gamify identified the need for a website refresh,
+								including the development of a Learning Centre to help educate
+								potential customers about the benefits of gamification.
+							</p>
+							<p>
+								I developed main pages for this project including the Home page,
+								Partner page, Direct page, Wix page and Learning Centre. The
+								client wanted to be able to display pricing on the Direct page
+								based on the user’s region, while also allowing them the option
+								to change the currency. I created this functionality using
+								HubSpot’s smart content features in conjunction with jQuery and
+								AJAX to get conversion rates from a currency API.
+							</p>
+						</div>
+						<div class="col-lg-6 feature">
+							<a href="https://www.gamify.com/" target="_blank">
+								<img src="images/portfolio-gamify.jpg" class="img-fluid" />
+							</a>
+							<a href="https://www.gamify.com/" target="_blank">View Website</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="section" id="weploy">
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-6">
+							<h2>Weploy</h2>
+							<p>
+								Weploy is an online platform and app that connects businesses
+								with pre-screened staff to help fill role vacancies. As Weploy
+								has been gaining traction and increased exposure in the media,
+								they required a new ‘two-sided’ website that would provide them
+								with a vibrant look and channel visitors into the appropriate
+								section of their website.
+							</p>
+							<p>
+								A challenge faced during development was allowing the client
+								with a sufficient amount of flexibility regarding colours (as
+								they have multiple brand colours), while still making the
+								templates easy to use for a non-developer. I provided training
+								to the client, as well as significant documentation prior to
+								launch to ensure they were comfortable and understood the new
+								configutation of their website.
+							</p>
+						</div>
+						<div class="col-lg-6 feature">
+							<a href="https://www.weployapp.com" target="_blank">
+								<img src="images/portfolio-weploy.jpg" class="img-fluid" />
+							</a>
+							<a href="https://www.weployapp.com" target="_blank"
+								>View Website</a
+							>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="footer text-center">Genevieve Carter 2022</div>
+	</body>
 </html>
