Fixed typos, cleaned up index.html

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 							<p>
 								Leveraging the Shopify platform with React to mount customer UI
 								components, I worked closely with marketing to implement a
-								custom tagging feature, implemented customer filtering
+								custom tagging feature, implemented custom filtering
 								functionality and developed various interactive promotional
 								landing pages to support marketing campaigns.
 							</p>
@@ -136,7 +136,7 @@
 						<div class="col-lg-6">
 							<h2>Flight Centre</h2>
 							<p>
-								Flight Centre Travel Academy (FCTA) is Flight Centre’s
+								Flight Centre Travel Academy (FCTA) is Flight Centre's
 								registered training organisation. Their old website needed some
 								love, as it was poorly structured and difficult for students to
 								find relevant information.
@@ -171,7 +171,7 @@
 							<h2>Gamify</h2>
 							<p>
 								Gamify is a Gamification Marketing leader that helps companies
-								make fun and enaging ‘AdverGames’. After recently partnering
+								make fun and enaging 'AdverGames'. After recently partnering
 								with Wix, Gamify identified the need for a website refresh,
 								including the development of a Learning Centre to help educate
 								potential customers about the benefits of gamification.
@@ -180,9 +180,9 @@
 								I developed main pages for this project including the Home page,
 								Partner page, Direct page, Wix page and Learning Centre. The
 								client wanted to be able to display pricing on the Direct page
-								based on the user’s region, while also allowing them the option
+								based on the user's region, while also allowing them the option
 								to change the currency. I created this functionality using
-								HubSpot’s smart content features in conjunction with jQuery and
+								HubSpot's smart content features in conjunction with jQuery and
 								AJAX to get conversion rates from a currency API.
 							</p>
 						</div>
@@ -204,7 +204,7 @@
 								Weploy is an online platform and app that connects businesses
 								with pre-screened staff to help fill role vacancies. As Weploy
 								has been gaining traction and increased exposure in the media,
-								they required a new ‘two-sided’ website that would provide them
+								they required a new 'two-sided' website that would provide them
 								with a vibrant look and channel visitors into the appropriate
 								section of their website.
 							</p>
@@ -215,7 +215,7 @@
 								templates easy to use for a non-developer. I provided training
 								to the client, as well as significant documentation prior to
 								launch to ensure they were comfortable and understood the new
-								configutation of their website.
+								configuration of their website.
 							</p>
 						</div>
 						<div class="col-lg-6 feature">
