Amended footer content and styles

--- a/index.html
+++ b/index.html
@@ -230,6 +230,6 @@
 				</div>
 			</div>
 		</div>
-		<div class="footer text-center">Genevieve Carter 2022</div>
+		<div class="footer text-center">Genevieve Carter</div>
 	</body>
 </html>
