--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
 		<!-- Bootstrap Core CSS -->
 		<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 		<!-- Custom Fonts -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css?family=Montserrat:400,600"
+			href="https://fonts.googleapis.com/css2?family=Jost&display=swap"
 			rel="stylesheet"
-		/>
-		<link
-			href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic"
-			rel="stylesheet"
-			type="text/css"
 		/>
 		<link
 			href="vendor/simple-line-icons/css/simple-line-icons.css"
@@ -53,7 +50,7 @@
 					</div>
 					<div class="col-lg-7">
 						<h1 class="mb-3">Genevieve Carter</h1>
-						<h3 class="mb-5">Front End Developer</h3>
+						<h3 class="mb-4">Front End Developer</h3>
 						<a
 							class="btn btn-primary btn-xl js-scroll-trigger"
 							href="https://www.linkedin.com/in/genevievec/"
