chore: Fix typo

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 site.
               </p>
               <p>
-                Leveraging the Shopify platform with React to mount customer UI
+                Leveraging the Shopify platform with React to mount custom UI
                 components, I worked closely with marketing to implement a
                 custom tagging feature, implemented custom filtering
                 functionality and developed various interactive promotional
